      fetching.  Reconnect works for those databases that 
      raise a catchable data error during results 
      (i.e. doesn't work on MySQL) [ticket:978]

    - implemented two-phase API for "threadlocal" engine, 
      via engine.begin_twophase(), engine.prepare()
      [ticket:936]

    - fixed bug which was preventing UNIONS from being cloneable,
      [ticket:986]
      
- orm
    - any(), has(), contains(), ~contains(), attribute level ==
      and != now work properly with self-referential relations -
      the clause inside the EXISTS is aliased on the "remote"
      side to distinguish it from the parent table.
    
    - repaired behavior of == and != operators at the relation()
      level when compared against NULL for one-to-one 
      relations [ticket:985]
      
    - fixed bug whereby session.expire() attributes were not
      loading on an polymorphically-mapped instance mapped 
      by a select_table mapper.
      
    - added query.with_polymorphic() - specifies a list
      of classes which descend from the base class, which will
      be added to the FROM clause of the query.  Allows subclasses
      to be used within filter() criterion as well as eagerly loads
      the attributes of those subclasses.
    
    - Your cries have been heard: removing a pending item from an
      attribute or collection with delete-orphan expunges the item
      from the session; no FlushError is raised.  Note that if you
      session.save()'ed the pending item explicitly, the
      attribute/collection removal still knocks it out.

    - Fixed potential generative bug when the same Query was used
      to generate multiple Query objects using join().

    - fixed bug which was introduced in 0.4.3, whereby loading an
      already-persistent instance mapped with joined table inheritance
      would trigger a useless "secondary" load from its joined 
      table, when using the default "select" polymorphic_fetch.  